# gradio-pianoroll

./: .coverage  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  F0_DEMO_SETUP.md  LINE_LAYER_USAGE.md  Makefile  README.md  TIMING_CONVERSIONS.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  vitest.config.ts
.cursor/rules/: audio-features.mdc  development-workflow.mdc  gradio-component.mdc  project-overview.mdc
.github/workflows/: docs.yml
backend/gradio_pianoroll/: __init__.py  audio_utils.py  backend_data.py  constants.py  data_models.py  note.py  pianoroll.py  timing_utils.py
backend/gradio_pianoroll/utils/: __init__.py  _internal.py  analysis.py  converters.py  research.py  templates.py  ui_builders.py
demo/: app.py
docs/: index.md  requirements.txt
docs/advanced/: line-layer.md  performance.md
docs/api/: audio-utils.md  components.md  data-models.md  events.md
docs/developer/: api-reference.md  examples.md  type-checking.md  type-stubs.md
docs/examples/: audio-features.md  basic-usage.md  f0-analysis.md  index.md  phoneme-processing.md  synthesizer.md
docs/getting-started/: 5-minute-start.md  faq.md  installation.md  migration-guide.md  quick-start.md
docs/installation/: index.md
docs/quickstart/: index.md
docs/user-guide/: audio-analysis.md  basic-usage.md  phoneme-processing.md  synthesizer.md  utils-research.md  utils-templates.md
examples/: README.md  audio_feature_demo.py  audio_features_demo.py  basic_demo.py  common_utils.py  f0_analysis_demo.py  f0_demo.py  interface_demo.py  minimal_templates.py  phoneme_demo.py  simple_demo.py  synthesizer_demo.py
frontend/: Index.svelte  package-lock.json  package.json  tsconfig.json
frontend/components/: DebugComponent.svelte  GridComponent.svelte  KeyboardComponent.svelte  LayerControlPanel.svelte  LyricEditor.svelte  PianoRoll.svelte  PlayheadComponent.svelte  TimeLineComponent.svelte  Toolbar.svelte  WaveformComponent.svelte
frontend/components/grid/: index.ts
frontend/components/grid/interactions/: DragDropHandler.ts  MouseController.ts  SelectionManager.ts  index.ts
frontend/components/grid/renderers/: GridRenderer.ts  NoteRenderer.ts  PlayheadRenderer.ts  WaveformRenderer.ts  index.ts
frontend/components/layers/: LayerManager.ts  NoteLayer.ts  WaveformLayer.ts  index.ts  types.ts
frontend/components/piano-roll/: AudioManager.ts  PlaybackController.ts  index.ts
frontend/types/: audio.ts  backend.ts  component.ts  events.ts  index.ts  layer.ts  notes.ts  piano_roll_data.ts  playback.ts
frontend/utils/: LayerSystem.ts  audioEngine.ts  backend-data.ts  constants.ts  coordinateUtils.ts  flicks.ts  index.ts  logger.ts  mouseHandler.ts  noteRenderer.ts  snapUtils.ts  timing.ts
frontend/utils/audio/: backendAudioEngine.ts  index.ts  waveformGenerator.ts
frontend/utils/coordinates/: index.ts
frontend/utils/layers/: GridLayer.ts  LineLayer.ts  NotesLayer.ts  WaveformLayer.ts  index.ts
frontend/utils/timing/: index.ts
tests/: __init__.py  conftest.py  test_audio_utils.py  test_backend_data.py  test_integration.py  test_note.py  test_timing_utils.py
tests/backend/: __init__.py  test_data_models.py  test_timing_utils.py
tests/frontend/: coordinateUtils.test.ts  flicks.test.ts  mouseHandler.test.ts  noteRenderer.test.ts  snapUtils.test.ts
