[project]
name = "gradio_pianoroll"
version = "0.0.9"
description = "A PianoRoll Component for Gradio."
readme = "README.md"
license = "apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "crlotwhite", email = "crlotwhite@gmail.com" }]
keywords = ["gradio-custom-component", "gradio-template-Fallback", "audio"]
dependencies = ["gradio>=4.0,<6.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.urls]
repository = "https://github.com/crlotwhite/gradio-pianoroll"
space = "https://huggingface.co/spaces/crlotwhite/gradio_pianoroll"

[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "build",
    "twine",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "ruff>=0.8.0",
]

[dependency-groups]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
    "pymdown-extensions>=10.0.0",
]

[tool.hatch.build]
artifacts = ["/backend/gradio_pianoroll/templates", "*.pyi", "/\\backend\\gradio_pianoroll\\templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_pianoroll"]

[tool.hatch.build.targets.sdist]
only-include = ["backend", "frontend", "pyproject.toml", "README.md", "mkdocs.yml", "DEPLOYMENT.md"]

# mypy type checking settings
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Strict type checking for gradio_pianoroll package
[[tool.mypy.overrides]]
module = "gradio_pianoroll.*"
strict = true

# Relaxed checking for external libraries
[[tool.mypy.overrides]]
module = [
    "gradio.*",
    "numpy.*",
    "librosa.*"
]
ignore_missing_imports = true

# Black code formatting settings
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort import sorting settings
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# ruff settings (for uv project)
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gradio_pianoroll"]
